# loaddef

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
.plans/: PLANS.md
.plans/steps/: step_1_foundation.md
docs/: benchmark-contract.md
src/: config.rs  dashboard.rs  main.rs  random_source.rs  stats.rs
