[package]
name = "bench-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = "0.8"
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6"
futures-util = "0.3"
hdrhistogram = "7"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
